[gd_scene load_steps=13 format=3 uid="uid://cndvywq54fywo"]

[ext_resource type="Texture2D" uid="uid://d26ubomas8nue" path="res://addons/Tiny Swords (Update 010)/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_4dnus"]
[ext_resource type="Script" path="res://UI/game_over_ui.gd" id="1_y63ea"]
[ext_resource type="Texture2D" uid="uid://ce2en5cnu2y8l" path="res://addons/Tiny Swords (Update 010)/UI/Banners/Banner_Horizontal.png" id="2_6xrat"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uxgjh"]
texture = ExtResource("1_4dnus")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="SystemFont" id="SystemFont_pem2w"]
font_names = PackedStringArray("Bahnschrift", "Comic Sans MS", "Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_1vdje"]
font = SubResource("SystemFont_pem2w")
font_size = 50
font_color = Color(0.24893, 7.67084e-08, 4.21144e-08, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dakmo"]
texture = ExtResource("2_6xrat")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_gh2s2"]
font_names = PackedStringArray("ROG Fonts", "Arial", "Fantasy")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_1ohec"]
font = SubResource("SystemFont_gh2s2")
font_size = 32
font_color = Color(0, 0, 0, 0.882353)

[sub_resource type="Animation" id="Animation_mwt1b"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGround:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(338, 22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(231, 340)]
}

[sub_resource type="Animation" id="Animation_siwi6"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGround:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(0.329877, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.796078)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.406126, 1),
"update": 0,
"values": [Vector2(338, -152), Vector2(338, 50)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9, 2),
"transitions": PackedFloat32Array(0.406126, 1),
"update": 0,
"values": [Vector2(231, 672), Vector2(231, 360)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_arybf"]
_data = {
"RESET": SubResource("Animation_mwt1b"),
"default": SubResource("Animation_siwi6")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_y63ea")

[node name="BackGround" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 338.0
offset_top = 22.0
offset_right = 814.0
offset_bottom = 148.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_uxgjh")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -39.0
offset_right = 142.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME  OVER"
label_settings = SubResource("LabelSettings_1vdje")

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 231.0
offset_top = 340.0
offset_right = 921.0
offset_bottom = 566.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_dakmo")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -54.0
offset_right = 236.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 2

[node name="TimeSurvived" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived:"
label_settings = SubResource("LabelSettings_1ohec")

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "14:59"
label_settings = SubResource("LabelSettings_1ohec")

[node name="Monsters Defeated" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated:"
label_settings = SubResource("LabelSettings_1ohec")

[node name="MobsKillsLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1255"
label_settings = SubResource("LabelSettings_1ohec")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_arybf")
}
autoplay = "default"
